--- a/Tienda-RipCurl/RipCurl/src/Componentes/Item/Item.css
+++ b/Tienda-RipCurl/RipCurl/src/Componentes/Item/Item.css
@@ -1,6 +1,7 @@
 .card:hover {
-    box-shadow: 0px 0px 5px 5px #0567b8;
+    box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.699);  
 }
-.w-100:hover{
-    background-color: #d3e3f0;
+.boton-card:hover{
+    background-color: #19191a;
+    color: aliceblue;
 } 
